--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
     height: 80%;
     margin-top: 5%;
     margin-left: 10%;
-    background: red;
+    background: linear-gradient(to right bottom,blue,cyan);
     display: flex;
 }
 .c-1 {
@@ -36,6 +36,9 @@
 .ans {
     width: 80%;
     margin-left: 10%;
-    height: 50px;
+    height: 30%;
     margin-top: 30px;
+    background: linear-gradient(to left,darkblue,blue);
+    border: 4px solid rgba(255, 255, 255, 0.6);
+    border-radius: 20px;
 }
