--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
     width: 50%;
 }
 .question {
+    color: white;
     font-family: fantasy;
     font-size: 24px;
     align-self: center;
@@ -36,9 +37,40 @@
 .ans {
     width: 80%;
     margin-left: 10%;
-    height: 30%;
+    height: 60px;
     margin-top: 30px;
-    background: linear-gradient(to left,darkblue,blue);
+    background: linear-gradient(to left,rgb(54, 255, 27),rgb(43, 255, 0));
     border: 4px solid rgba(255, 255, 255, 0.6);
-    border-radius: 20px;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+.ans:hover {
+    cursor: pointer;
+    transition: 0.5s;
+    background: rgb(3, 52, 187);
+    
+}
+.sco {
+    font-size: 24px;
+    margin-top: 10%;
+    text-align: center;
+}
+i {
+    color: goldenrod;
+}
+.finished {
+    color: white;
+    font-size: 26px;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 15%;
+}
+.cong {
+    color: white;
+    font-size: 22px;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 10%;
 }
