--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
     font-size: 21px;
     height: 60px;
     margin-top: 30px;
-    background: linear-gradient(to right,#ff4d12,#e03400) ;
+    background: rgb(245, 64, 9);
     border: 2px solid rgba(255, 255, 255, 0.6);
     border-radius: 30px;
     color: white;
